--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.11.5",
+    "@vitest/coverage-v8": "^1.2.1",
     "eslint": "^8.56.0",
+    "npm-run-all": "^4.1.5",
+    "supertest": "^6.3.4",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite-tsconfig-paths": "^4.3.1",
+    "vitest": "^1.2.1"
   }
 }
