--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.11.5",
+    "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.2.1",
     "eslint": "^8.56.0",
     "npm-run-all": "^4.1.5",
@@ -31,5 +32,11 @@
     "typescript": "^5.3.3",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^1.2.1"
+  },
+  "dependencies": {
+    "@fastify/jwt": "^8.0.0",
+    "dotenv": "^16.3.2",
+    "fastify": "^4.25.2",
+    "zod": "^3.22.4"
   }
 }
