--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vitest/coverage-v8": "^1.2.1",
     "eslint": "^8.56.0",
     "npm-run-all": "^4.1.5",
+    "prisma": "^5.8.1",
     "supertest": "^6.3.4",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
