--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@fastify/jwt": "^8.0.0",
+    "@prisma/client": "^5.8.1",
     "dotenv": "^16.3.2",
     "fastify": "^4.25.2",
     "zod": "^3.22.4"
