--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.11.5",
     "@types/supertest": "^6.0.2",
     "@vitest/coverage-v8": "^1.2.1",
@@ -37,6 +38,7 @@
   "dependencies": {
     "@fastify/jwt": "^8.0.0",
     "@prisma/client": "^5.8.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.2",
     "fastify": "^4.25.2",
     "zod": "^3.22.4"
